# event-driven-open-weather-insight

./: .env.example  .gitignore  AI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SOURCES.md  TODO.md  docker-compose.yml  pyproject.toml
infra/caddy/: Caddyfile
local/quality/: gx_utils.py  gxe_airnow_air_quality_forecast.py  gxe_openaq_measurements_by_location.py  gxe_weather_hourly_forecast.py
scripts/: migrate_openaq_measurements_add_quality.sql  search_for_airnow_api_spec_file.py  tree_gen.py
src/weather_insight/: __init__.py
src/weather_insight/clients/: airnow_client.py  http_session.py  open_meteo_client.py  openaq_client.py  weather_client.py
src/weather_insight/dags/: airnow_forecast_ingest_dag.py  dbt_transform_core_dag.py  open_meteo_ingest_dag.py  openaq_ingest_dag.py  weather_forecast_ingest_dag.py
src/weather_insight/db/: __init__.py  bootstrap.py  ops_airnow.py  ops_geo.py  ops_nws.py  ops_open_meteo.py  ops_openaq.py  ops_weather.py  session.py  utils.py
tests/: conftest.py
tests/clients/: test_airnow_client.py  test_http_session.py  test_open_meteo_client.py  test_openaq_client.py  test_weather_client.py
tests/dags/: test_dags.py
tests/db/: test_ops_airnow.py  test_ops_open_meteo.py  test_ops_openaq.py  test_ops_weather.py  test_utils.py
tests/dbt/: test_project.py
tests/integrations/: test_open_meteo_adapter.py
tests/models/: test_events.py
tests/sinks/: test_base_sink.py  test_open_meteo_sink.py  test_openaq_payloads.py  test_weather_sink.py
tests/utils/: test_logging_utils.py
(+64 files in other folders)
